# picos

./: LCD44780.asm  LCD44780.inc  README.md  TODO  arg.c  arg.h  bin_7seg.asm  bin_7seg.inc  clock.asm  defines.h  error.h  extract_piclang.pl  globals.inc  header.asm  header.inc  io.c  io.h  io.inc  kernel.asm  kernel.inc  lcd.c  lcd.h  math.inc  mem.asm  mem.inc  page.c  page.h  page.inc  picfs.c  picfs.h  picfs_error.c  picfs_error.h  piclang.asm  piclang.c  piclang.h  piclang.inc  picos_std.c  picos_std.h  picos_time.c  picos_time.h  (+25 more)
assembler/: Build.cpp  Build.h  Command.cpp  Command.h  CommandWords.cpp  CommandWords.h  Help.cpp  Help.h  Makefile.am  Makefile.in  Parser.cpp  Parser.h  StringTokenizer.cpp  StringTokenizer.h  args_parser.cpp  assembler.cpp  config.h  config.h.in  configure  configure.ac  good_exceptions.cpp  good_exceptions.h  main.cpp  opcodes.cpp  pasm.h  pasm_lex.c  pasm_lex.l  pasm_src.c  pasm_yacc.c  pasm_yacc.h  pasm_yacc.y  simulator.cpp
assembly/: LCD44780.inc  io.inc  kernel_memory.inc  piclang.inc  serial_comm.inc
compiler/: AUTHORS  Makefile.in  config.h  configure  configure.ac  fs.c  fs.h  pasm.h  pasm_lex.c  pasm_lex.l  pasm_src.c  pasm_yacc.c  pasm_yacc.h  pasm_yacc.y
dpkg/DEBIAN/: control
rpm/: README  picos-0.6.0.spec
sample_programs/: Makefile  base64.plc  calc.plc  call_test.plc  echo.plc  ed.plc  example.img  fixed.plc  less.plc  ls.plc  lsmount.plc  morse.plc  pvi.plc  sample_eeprom.hex  setdate.plc  settime.plc  simple_program.hex  sleep.plc  startup_message.plc  test.plc  test_math.asm  time.plc  timestamp.plc
tools/: CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  base64.c  base64.h  compiler.c  config.h  config.h.in  configure  configure.ac  field_labeler.txt  fs.c  fs.h  globals.h  linker.c  load_config.c  load_config.h  magic  mount_picfs.c  pasm.c  pasm.h  pasm_lex.c  pasm_lex.l  pasm_src.c  pasm_yacc.c  pasm_yacc.h  pasm_yacc.y  pdasm.c  picdisk.c  picos.py.c  picos_base64.c  picos_base64.h  picosc_lex.l  picosc_yacc.y  setup.py
tools/python/: picos.py.c  setup.py
tools/python/picos/: __init__.py  piclang.py  utils.py
tools/python/scripts/: extract_raw_file
tools/test/: test.img  test.plc  test_output.cmake
utils/: Makefile  crc.c  rsa.c
